// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputImage> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 22,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 5,
          },
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 5,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputImage> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 22,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 5,
          },
          Object {
            "backgroundColor": "#f4f4f4",
          },
          false,
          false,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={false}
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 5,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            Object {
              "color": "#707070",
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputImage> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 22,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 5,
          },
          false,
          false,
          Object {
            "borderColor": "#d33c44",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 5,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../components/Icon/assets/error.png",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "width": 20,
            },
            Object {
              "height": 20,
              "marginHorizontal": 5,
              "width": 20,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<InputImage> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 22,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 5,
          },
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 5,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 12,
            "lineHeight": 16,
          },
          Object {
            "color": "#707070",
          },
          Object {
            "marginTop": 4,
            "maxWidth": "100%",
            "paddingLeft": 10,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
</View>
`;

exports[`<InputImage> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 22,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 16,
          },
          Object {
            "color": "#707070",
          },
          Object {
            "marginBottom": 6,
            "marginLeft": 10,
          },
        ]
      }
    >
      Hello World
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 5,
          },
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 5,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputImage> when {required} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 22,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 5,
          },
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 5,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../components/Icon/assets/error_outline.png",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "width": 20,
            },
            Object {
              "height": 20,
              "marginHorizontal": 5,
              "width": 20,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<InputImage> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 22,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 5,
          },
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 5,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputImage> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#F5F5F6",
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#cdd2d4",
          "borderRadius": 3,
          "height": 44,
          "marginBottom": 1,
          "width": 44,
        },
      ]
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://soyjavi.com/assets/images/soyjavi.jpg",
        }
      }
      style={
        Object {
          "backgroundColor": "#cdd2d4",
          "borderRadius": 3,
          "height": 44,
          "marginBottom": 1,
          "width": 44,
        }
      }
    />
    <ActivityIndicator
      animating={true}
      color="white"
      hidesWhenStopped={true}
      size="large"
      style={
        Array [
          Object {
            "position": "absolute",
          },
          false,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "marginBottom": 22,
        },
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 10,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 5,
          },
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 5,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
          ]
        }
        underlineColorAndroid="transparent"
        value="http://soyjavi.com/assets/images/soyjavi.jpg"
      />
    </View>
  </View>
</View>
`;
